cambios form contacto propiedades

--- a/propiedades.html
+++ b/propiedades.html
@@ -207,8 +207,24 @@
             </div>
             <div class="col-md-6">
               <label for="propiedadInteres" class="form-label">Propiedad de Interés</label>
-              <input type="text" id="propiedadInteres" class="form-control" readonly>
-            </div>
+              <select id="propiedadInteres" class="form-control">
+                  <option value="">Selecciona una propiedad...</option>
+                  <option value="Casa Moderna en Venta">Casa Moderna en Venta</option>
+                  <option value="Departamento en Alquiler">Departamento en Alquiler</option>
+                  <option value="Casa en Villa Belgrano">Casa en Villa Belgrano</option>
+                  <option value="Departamento de Lujo">Departamento de Lujo</option>
+                  <option value="Vivienda a Estrenar en La Deseada">Vivienda a Estrenar en La Deseada</option>
+                  <option value="Villa Vacacional en Bariloche">Villa Vacacional en Bariloche</option>
+                  <option value="Casa Familiar en Salta">Casa Familiar en Salta</option>
+                  <option value="Apartamento Económico en San Juan">Apartamento Económico en San Juan</option>
+                  <option value="Terreno ejemplo">Terreno ejemplo</option>
+                  <option value="Terreno ejemplo2">Terreno ejemplo2</option>
+                  <option value="Local ">Local </option>
+                  <option value="Local 2">Local 2</option>
+                  <option value="Oficinas">Oficinas</option>
+              </select>
+          </div>
+          
             <div class="col-12">
               <label for="mensaje" class="form-label">Mensaje</label>
               <textarea id="mensaje" class="form-control" rows="4" placeholder="Escribe tu mensaje..."></textarea>
@@ -220,6 +236,7 @@
         </form>
       </div>
     </section>
+
 
 
   </main>
