cambios form contacto propiedades

--- a/propiedades.html
+++ b/propiedades.html
@@ -104,7 +104,7 @@
               <a class="nav-link" href="/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#contacto">Contacto</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -208,20 +208,20 @@
             <div class="col-md-6">
               <label for="propiedadInteres" class="form-label">Propiedad de Interés</label>
               <select id="propiedadInteres" class="form-control">
-                  <option value="">Selecciona una propiedad...</option>
-                  <option value="Casa Moderna en Venta">Casa Moderna en Venta</option>
-                  <option value="Departamento en Alquiler">Departamento en Alquiler</option>
-                  <option value="Casa en Villa Belgrano">Casa en Villa Belgrano</option>
-                  <option value="Departamento de Lujo">Departamento de Lujo</option>
-                  <option value="Vivienda a Estrenar en La Deseada">Vivienda a Estrenar en La Deseada</option>
-                  <option value="Villa Vacacional en Bariloche">Villa Vacacional en Bariloche</option>
-                  <option value="Casa Familiar en Salta">Casa Familiar en Salta</option>
-                  <option value="Apartamento Económico en San Juan">Apartamento Económico en San Juan</option>
-                  <option value="Terreno ejemplo">Terreno ejemplo</option>
-                  <option value="Terreno ejemplo2">Terreno ejemplo2</option>
-                  <option value="Local ">Local </option>
-                  <option value="Local 2">Local 2</option>
-                  <option value="Oficinas">Oficinas</option>
+                  <option class="optionProp" value="">Selecciona una propiedad...</option>
+                  <option class="optionProp" value="Casa Moderna en Venta">Casa Moderna en Venta</option>
+                  <option class="optionProp" value="Departamento en Alquiler">Departamento en Alquiler</option>
+                  <option class="optionProp" value="Casa en Villa Belgrano">Casa en Villa Belgrano</option>
+                  <option class="optionProp" value="Departamento de Lujo">Departamento de Lujo</option>
+                  <option class="optionProp" value="Vivienda a Estrenar en La Deseada">Vivienda a Estrenar en La Deseada</option>
+                  <option class="optionProp" value="Villa Vacacional en Bariloche">Villa Vacacional en Bariloche</option>
+                  <option class="optionProp" value="Casa Familiar en Salta">Casa Familiar en Salta</option>
+                  <option class="optionProp" value="Apartamento Económico en San Juan">Apartamento Económico en San Juan</option>
+                  <option class="optionProp" value="Terreno ejemplo">Terreno ejemplo</option>
+                  <option class="optionProp" value="Terreno ejemplo2">Terreno ejemplo2</option>
+                  <option class="optionProp" value="Local ">Local </option>
+                  <option class="optionProp" value="Local 2">Local 2</option>
+                  <option class="optionProp" value="Oficinas">Oficinas</option>
               </select>
           </div>
           
@@ -230,7 +230,7 @@
               <textarea id="mensaje" class="form-control" rows="4" placeholder="Escribe tu mensaje..."></textarea>
             </div>
             <div class="col-12 text-center">
-              <button type="submit" class="btn btn-primary w-50">Enviar Mensaje</button>
+              <button type="submit" class="btn btn-primary ">Enviar Mensaje <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
             </div>
           </div>
         </form>
