cambios form contacto propiedades

--- a/nosotros.html
+++ b/nosotros.html
@@ -124,7 +124,7 @@
                 <h1>Conoce a <span style="color: #71C6D4;">UnenGroup</span></h1>
                 <p>Comprometidos a ayudarte a encontrar el hogar ideal<br> para construir nuevas historias y momentos
                     inolvidables.</p>
-                <a href="#secContacto" class="btn btn-warning">Contáctanos</a>
+                <a href="#secContactoNosotros" class="btn btn-warning">Contáctanos</a>
             </div>
         </section>
 
