--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         </div>
 
 
-        <!-- dicider  -->
+        <!-- divider  -->
 
         <div class="hr-with-text">
             <hr>
@@ -715,7 +715,7 @@
         </div>
 
         <!-- Modal Vista 360° -->
-        <div class="modal fade" id="property360Modal" tabindex="-1" aria-labelledby="property360ModalTitle"
+        <!-- <div class="modal fade" id="property360Modal" tabindex="-1" aria-labelledby="property360ModalTitle"
             aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
@@ -729,7 +729,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
