--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                     <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina#filtros">Locales
+                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
                                         |
-                                        Oficinas</a>
+                                        Oficinas | Cocheras</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
