--- a/propiedades.html
+++ b/propiedades.html
@@ -49,67 +49,70 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <!-- Logo -->
-        <a class="navbar-brand" href="/">
-          <img src="./images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
-        </a>
-        <!-- Toggle Button for Mobile -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Navigation Links -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link " href="/">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#servicios">Servicios</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/propiedades.html" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Tipos de propiedades
-              </a>
-              <ul class="dropdown-menu animate__animated ulProps" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler#filtros">Alquiler </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=venta#filtros">Venta</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
-                    Temporario</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
-                    Vacacional</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=local-oficina#filtros">Locales
-                    |
-                    Oficinas</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="propiedades.html?tipo=all#filtros">Todas</a>
-                </li>
+          <!-- Logo -->
+          <a class="navbar-brand" href="/">
+              <img src="./images/logoNavBarprueba.png" alt="Logo" id="logoNavbar">
+          </a>
+          <!-- Toggle Button for Mobile -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Navigation Links -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#servicios">Servicios</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="/propiedades.html" id="navbarDropdown"
+                          role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Tipos de propiedades
+                      </a>
+                      <ul class="dropdown-menu animate__animated ulProps" aria-labelledby="navbarDropdown">
+                          <li>
+                              <a class="dropdown-item" href="propiedades.html?tipo=alquiler#filtros">Alquiler </a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item" href="propiedades.html?tipo=venta#filtros">Venta</a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item"
+                                  href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
+                                  Temporario</a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item"
+                                  href="propiedades.html?tipo=alquiler-temporario#filtros">Alquiler
+                                  Vacacional</a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item" href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
+                                  |
+                                  Oficinas | Cocheras</a>
+                          </li>
+                          <li>
+                              <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
+                          </li>
+                      </ul>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#contacto">Contacto</a>
+                  </li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-          </ul>
-        </div>
+
+          </div>
       </div>
-    </nav>
+  </nav>
 
   </header>
 
