--- a/nosotros.html
+++ b/nosotros.html
@@ -65,7 +65,7 @@
                             <a class="nav-link" href="/">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#servicios">Servicios</a>
+                            <a class="nav-link" href="#servicios">Servicios</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="/propiedades.html" id="navbarDropdown"
@@ -93,12 +93,12 @@
                                     <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina#filtros">Locales
+                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
                                         |
-                                        Oficinas</a>
+                                        Oficinas | Cocheras</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=all#filtros">Todas</a>
+                                    <a class="dropdown-item" href="propiedades.html?tipo=all">Todas</a>
                                 </li>
                             </ul>
                         </li>
@@ -106,9 +106,10 @@
                             <a class="nav-link" href="/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#secContactoNosotros">Contacto</a>
+                            <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
                     </ul>
+      
                 </div>
             </div>
         </nav>
