cambios esteticos y responsive final

--- a/index.html
+++ b/index.html
@@ -846,8 +846,8 @@
 
                 <div class="row">
                     <!-- Formulario de Contacto -->
-                    <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <form id="contacto" action="/enviar-mensaje" method="POST" class="bg-white p-4 rounded shadow">
+                    <div class="col-md-6  animate__animated animate__fadeInLeft">
+                        <form id="contacto" action="/enviar-mensaje" method="POST" class="bg-white mismoHeight p-4 rounded shadow">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
                                 <input type="text" id="nombre" name="nombre" class="form-control"
@@ -881,8 +881,8 @@
                     </div>
 
                     <!-- Redes Sociales -->
-                    <div class="col-md-6 animate__animated animate__fadeInRight" id="contenedorSocialHome">
-                        <div class="bg-white p-4 rounded shadow">
+                    <div class="col-md-6  animate__animated animate__fadeInRight" id="contenedorSocialHome">
+                        <div class="bg-white mismoHeight p-4 rounded shadow">
 
                             <h4 class="text-center mb-4">Síguenos en nuestras redes sociales</h4>
                             <div class="d-flex justify-content-center gap-3">
