--- a/nosotros.html
+++ b/nosotros.html
@@ -106,7 +106,7 @@
                             <a class="nav-link" href="/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacto">Contacto</a>
+                            <a class="nav-link" href="#secContactoNosotros">Contacto</a>
                         </li>
                     </ul>
       
@@ -373,10 +373,10 @@
 
                     <!-- Imagen Representativa -->
                     <div class="col-md-6 animate__animated animate__fadeInRight">
-                        <div class="image-container">
+                        <div class="mismoHeightN image-container">
                             <img src="./images/vistaNosotros/imgContactoNosotros.avif"
                                 alt="Representación de confianza y profesionalismo de UnenGroup"
-                                class="img-fluid rounded shadow" style="width: 100%; border-radius: 10px;">
+                                class="img-fluid  rounded shadow" style="width: 100%; border-radius: 10px;">
                         </div>
                     </div>
                 </div>
