--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                                     <a class="dropdown-item" href="propiedades.html?tipo=terreno#filtros">Terrenos</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
+                                    <a class="dropdown-item"
+                                        href="propiedades.html?tipo=local-oficina-cochera#filtros">Locales
                                         |
                                         Oficinas | Cocheras</a>
                                 </li>
@@ -130,7 +131,7 @@
                                 propiedades destacadas.</p>
                             <a href="/propiedades.html"
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Ver
-                                Propiedades</a>
+                                propiedades</a>
                         </div>
                         <img src="./images/home/heroBienvenida/heroFrist.jpg" class="img-fluid"
                             alt="Propiedad destacada">
@@ -138,13 +139,13 @@
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
                         <div class="hero-content text-center text-light">
-                            <h1 class="animate__animated animate__fadeInDown">Calidad, Confianza, <span
-                                    style="color: #71C6D4;">Compromiso</span></h1>
+                            <h1 class="animate__animated animate__fadeInDown">Calidad, confianza, <span
+                                    style="color: #71C6D4;">compromiso</span></h1>
                             <p class="animate__animated animate__fadeInUp">Ofrecemos propiedades únicas que se adaptan a
                                 tus necesidades.</p>
                             <a href="#servicios"
                                 class="btn btn-warning btn-lg animate__animated animate__fadeInUp mt-3">Nuestros
-                                Servicios</a>
+                                servicios</a>
                         </div>
                         <img src="./images/home/heroBienvenida/heroHomeSecImg.jpg" class="img-fluid"
                             alt="Propiedad de lujo">
@@ -203,11 +204,11 @@
                 <div class="row align-items-center ">
                     <div class="col-md-6 text-center historiaHome">
                         <h3 class="fw-bold">Nuestros objetivos</h3>
-                        <p>Ampliamos nuestra red de agentes y servicios, con foco en sostenibilidad y eficiencia
+                        <p>Ampliamos nuestra red de agentes y servicios, con foco en la sostenibilidad y eficiencia
                             energética, mientras asesoramos en inversiones de Real Estate. A corto plazo, buscamos
                             liderar en ventas, alquileres y tasaciones; a largo plazo, ofrecer gestión estratégica de
                             inversiones rentables.</p>
-                        <a href="/nosotros.html" class="btn btn-warning btn-lg  mt-3">Conócenos mejor</a>
+                        <a href="/nosotros.html" class="btn btn-warning btn-lg  mt-3">Conocenos mejor</a>
 
                     </div>
                     <div class="col-md-6 justify-content-center imgHistoriaHome">
@@ -235,9 +236,8 @@
                                 <img src="./images/servicios/Venta-propiedades.jpg"
                                     alt="venta de propiedades por Unen Group" style="width: 100%; border-radius: 10px;">
                                 <h4 class="fw-bold my-3 text-start">Venta de propiedades</h4>
-                                <p class="text-start">Encuentra el hogar perfecto con asesoramiento personalizado y una
-                                    experiencia sin
-                                    complicaciones</p>
+                                <p class="text-start">Encuentrá el hogar perfecto con asesoramiento personalizado y una
+                                    experiencia sin complicaciones</p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
                                     <a href="/propiedades.html" class="btn btn-warning">Ver propiedades</a>
                                     <button class="btn btn-outline-warning" data-bs-toggle="modal"
@@ -257,8 +257,7 @@
                                     a tus necesidades.
                                 </p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
-                                    <a href="/propiedades.html?tipo=alquiler" class="btn btn-warning">Encuentra tu
-                                        espacio</a>
+                                    <a href="/propiedades.html?tipo=alquiler" class="btn btn-warning">Encontrá tu espacio</a>
                                     <button class="btn btn-outline-warning" data-bs-toggle="modal"
                                         data-bs-target="#alquilerModal">Ver más</button>
 
@@ -337,7 +336,7 @@
                                 </p>
                                 <div class="d-flex flex-column justify-content-center gap-2 ">
                                     <a href="#contacto" onclick="setContactType('tasaciones')"
-                                        class="btn btn-warning">Solicitar Tasación</a>
+                                        class="btn btn-warning">Solicitar tasación</a>
                                     <button class="btn btn-outline-warning" data-bs-toggle="modal"
                                         data-bs-target="#tasacionesModal">Ver más</button>
                                 </div>
@@ -839,15 +838,15 @@
         <section id="contacto" class="py-5 bg-light">
             <div class="container">
                 <div class="text-center mb-5">
-                    <h2 class="animate__animated animate__fadeInDown">Contáctanos</h2>
-                    <p class="animate__animated animate__fadeInUp">Estamos aquí para ayudarte con todas tus necesidades
-                        inmobiliarias.</p>
+                    <h2 class="animate__animated animate__fadeInDown">Contactanos</h2>
+                    <p class="animate__animated animate__fadeInUp">Estamos para ayudarte con todas tus necesidades inmobiliarias</p>
                 </div>
 
                 <div class="row">
                     <!-- Formulario de Contacto -->
                     <div class="col-md-6  animate__animated animate__fadeInLeft">
-                        <form id="contacto" action="/enviar-mensaje" method="POST" class="bg-white mismoHeight p-4 rounded shadow">
+                        <form id="contacto" action="/enviar-mensaje" method="POST"
+                            class="bg-white mismoHeight p-4 rounded shadow">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre</label>
                                 <input type="text" id="nombre" name="nombre" class="form-control"
@@ -873,7 +872,7 @@
                             <div class="mb-3">
                                 <label for="mensaje" class="form-label">Mensaje</label>
                                 <textarea id="mensaje" name="mensaje" class="form-control" rows="4"
-                                    placeholder="Escribe tu mensaje aquí" required></textarea>
+                                    placeholder="Escribí tu mensaje" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-warning w-100 fw-bold">Enviar mensaje</button>
                         </form>
@@ -884,7 +883,7 @@
                     <div class="col-md-6  animate__animated animate__fadeInRight" id="contenedorSocialHome">
                         <div class="bg-white mismoHeight p-4 rounded shadow">
 
-                            <h4 class="text-center mb-4">Síguenos en nuestras redes sociales</h4>
+                            <h4 class="text-center mb-4">Seguinos en nuestras redes</h4>
                             <div class="d-flex justify-content-center gap-3">
                                 <a href="https://www.instagram.com/unengroup/" class="text-decoration-none text-dark">
                                     <i class="fab fa-instagram fa-2x"></i>
@@ -896,7 +895,7 @@
                                     <i class="fab fa-linkedin-in fa-2x"></i>
                                 </a>
                             </div>
-                            <p class="text-center mt-4">O llámanos al <strong>+54 9 351 6837691</strong></p>
+                            <p class="text-center mt-4">O llamá al <strong>+54 9 351 6837691</strong></p>
                             <div class="container">
                                 <img src="./images/home/imagenContactoUnenGroup.jpg"
                                     alt="imagen para contacto de UnenGroup inmobiliaria - Real Estate"
