cambios info sec quien

--- a/index.html
+++ b/index.html
@@ -173,21 +173,21 @@
                     <!-- Misión -->
                     <div class="col-md-4 text-center">
                         <i class="fas fa-handshake fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestra misión</h4>
+                        <h4 class="fw-bold">Misión</h4>
                         <p>Brindamos soluciones inmobiliarias personalizadas, seguras y confiables, adaptadas a las
                             necesidades de nuestros clientes.</p>
                     </div>
                     <!-- Visión -->
                     <div class="col-md-4 text-center" id="visionText">
                         <i class="fas fa-chart-line fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestra visión</h4>
+                        <h4 class="fw-bold">Visión</h4>
                         <p>Ser líderes en innovación, confianza y calidad, con una red de corredores comprometidos en
                             ofrecer soluciones integrales.</p>
                     </div>
                     <!-- Valores -->
                     <div class="col-md-4 text-center">
                         <i class="fas fa-heart fa-3x text-warning mb-3"></i>
-                        <h4 class="fw-bold">Nuestros valores</h4>
+                        <h4 class="fw-bold">Valores</h4>
                         <ul class="list-unstyled">
                             <li>Personalización</li>
                             <li>Excelencia</li>
