--- a/propiedades.html
+++ b/propiedades.html
@@ -169,7 +169,7 @@
     <!-- Lista de Propiedades -->
     <section id="propiedades" class="py-5 bg-light">
       <div class="container mt-5">
-        <div class="row" id="propiedadesContainer"></div>
+        <div class="row d-flex justify-content-center" id="propiedadesContainer"></div>
       </div>
     </section>
 
