--- a/propiedades.html
+++ b/propiedades.html
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image"> -->
 
   <!-- Icono del Sitio -->
-  <link rel="icon" href="./images/logo.png" type="image/x-icon">
+  <link rel="icon" href="./images/faviCon.jpg" type="image/x-icon">
 
   <!-- CSS Frameworks y Librerías -->
   <!-- Bootstrap -->
