--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 servicios</a>
                         </div>
                         <img src="./images/home/heroBienvenida/heroHomeSecImg.jpg" class="img-fluid"
-                            alt="Propiedad de lujo">
+                            alt="Propiedad de lujo" id="seconImgHero">
                     </div>
                 </div>
                 <!-- Pagination -->
@@ -257,7 +257,8 @@
                                     a tus necesidades.
                                 </p>
                                 <div class="d-flex justify-content-center flex-column gap-2">
-                                    <a href="/propiedades.html?tipo=alquiler" class="btn btn-warning">Encontrá tu espacio</a>
+                                    <a href="/propiedades.html?tipo=alquiler" class="btn btn-warning">Encontrá tu
+                                        espacio</a>
                                     <button class="btn btn-outline-warning" data-bs-toggle="modal"
                                         data-bs-target="#alquilerModal">Ver más</button>
 
@@ -459,8 +460,8 @@
                         <ul style="list-style: none; color:black;">
                             <li>
                                 <i class="fas fa-building" style="color:#71C6D4;"></i>
-                                <strong>Alquileres residenciales y comerciales:</strong> Contratos clásicos de 2 años
-                                que garantizan estabilidad y seguridad.
+                                <strong>Alquileres residenciales y comerciales:</strong> Contratos que garantizan
+                                estabilidad y seguridad.
                             </li>
                             <li>
                                 Nos aseguramos de ofrecerte el espacio adecuado que estas buscando para tu empresa o el
@@ -585,7 +586,7 @@
                             <li>
                                 <i class="fas fa-umbrella-beach" style="color:#71C6D4;"></i>
                                 <strong>Alquileres Vacacionales:</strong> Espacios diseñados para el descanso en
-                                destinos únicos, equipados para garantizar una experiencia placentera. Y
+                                destinos únicos, equipados para garantizar una experiencia placentera.
                             </li>
                         </ul>
 
@@ -839,7 +840,8 @@
             <div class="container">
                 <div class="text-center mb-5">
                     <h2 class="animate__animated animate__fadeInDown">Contactanos</h2>
-                    <p class="animate__animated animate__fadeInUp">Estamos para ayudarte con todas tus necesidades inmobiliarias</p>
+                    <p class="animate__animated animate__fadeInUp">Estamos para ayudarte con todas tus necesidades
+                        inmobiliarias</p>
                 </div>
 
                 <div class="row">
@@ -921,10 +923,8 @@
                     <div class="d-flex align-items-center" id="espacioFotoMobile">
                         <img src="./images/fotoEjemploCoty.jpg" alt="logo" class="me-3 ocultarMobile"
                             style="max-width: 150px; border-radius:50%;">
-                        <p class="mb-0">Somos una inmobiliaria comprometida con ayudarte a encontrar el hogar de tus
-                            sueños. Ofrecemos
-                            asesoramiento personalizado y un amplio catálogo de propiedades.</p>
-
+                        <p class="mb-0">Somos una inmobiliaria comprometida envés ayudarte a encontrar el hogar de tus
+                            sueños. Ofrecemos asesoramiento personalizado y un amplio catálogo de propiedades.</p>
                     </div>
                 </div>
                 <!-- Contact Section -->
